Fix: When `-init scrollY` is enabled but `-init scrollX` is not and the container was too narrow for the table, the header and body would misalign when scrolled.
DD-699

--- a/css/dataTables.dataTables.scss
+++ b/css/dataTables.dataTables.scss
@@ -307,6 +307,7 @@ div.dataTables_wrapper {
 		display: table;
 		clear: both;
 		width: 100%;
+		table-layout: fixed;
 	}
 
 	div.dataTables_layout_cell {
